Bug 16210 - BUG: scheduling while atomic: swapper/0/0x10000002 when ACPI is initialised
Summary: BUG: scheduling while atomic: swapper/0/0x10000002 when ACPI is initialised
Status: CLOSED PATCH_ALREADY_AVAILABLE
Alias: None
Product: ACPI
Classification: Unclassified
Component: ACPICA-Core (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Lin Ming
URL:
Keywords:
: 16564 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-06-14 18:34 UTC by François Valenduc
Modified: 2011-08-27 14:50 UTC (History)
8 users (show)

See Also:
Kernel Version: 2.6.35-rc3 (or maybe earlier, 2.6.34 is fine)
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
Output of acpidump (129.41 KB, text/plain)
2010-06-14 18:46 UTC, François Valenduc
Details

Description François Valenduc 2010-06-14 18:34:32 UTC
I found this error in dmesg which seems to appears when ACPI is started:

Jun 14 19:52:00 pc-francois kernel: [    0.003173] ACPI: Core revision 20100428
Jun 14 19:52:00 pc-francois kernel: [    0.007024] BUG: scheduling while atomic: swapper/0/0x10000002
Jun 14 19:52:00 pc-francois kernel: [    0.007117] Modules linked in:
Jun 14 19:52:00 pc-francois kernel: [    0.007266] Pid: 0, comm: swapper Not tainted 2.6.35-rc3+ #19
Jun 14 19:52:00 pc-francois kernel: [    0.007356] Call Trace:
Jun 14 19:52:00 pc-francois kernel: [    0.007457]  [<ffffffff8129a7a5>] ? schedule+0x485/0x6f0
Jun 14 19:52:00 pc-francois kernel: [    0.007557]  [<ffffffff811a5aac>] ? acpi_os_release_object+0x9/0xe
Jun 14 19:52:00 pc-francois kernel: [    0.007653]  [<ffffffff810318ed>] ? __cond_resched+0x1d/0x30
Jun 14 19:52:00 pc-francois kernel: [    0.007748]  [<ffffffff8129aaee>] ? _cond_resched+0x2e/0x40
Jun 14 19:52:00 pc-francois kernel: [    0.007845]  [<ffffffff811c12f9>] ? acpi_ps_complete_op+0x249/0x25f
Jun 14 19:52:00 pc-francois kernel: [    0.007939]  [<ffffffff811c1d90>] ? acpi_ps_get_opcode_info+0x0/0x41
Jun 14 19:52:00 pc-francois kernel: [    0.008010]  [<ffffffff811c1c6e>] ? acpi_ps_parse_loop+0x95f/0x96d
Jun 14 19:52:00 pc-francois kernel: [    0.009010]  [<ffffffff811c0c43>] ? acpi_ps_parse_aml+0x8e/0x29a
Jun 14 19:52:00 pc-francois kernel: [    0.009108]  [<ffffffff811bf4f8>] ? acpi_ns_one_complete_parse+0x108/0x125
Jun 14 19:52:00 pc-francois kernel: [    0.009203]  [<ffffffff811a5b25>] ? acpi_os_signal_semaphore+0x23/0x27
Jun 14 19:52:00 pc-francois kernel: [    0.009299]  [<ffffffff81052ddd>] ? up+0xd/0x40
Jun 14 19:52:00 pc-francois kernel: [    0.009390]  [<ffffffff811bf52f>] ? acpi_ns_parse_table+0x1a/0x37
Jun 14 19:52:00 pc-francois kernel: [    0.009484]  [<ffffffff811c41f0>] ? acpi_tb_verify_checksum+0x18/0x55
Jun 14 19:52:00 pc-francois kernel: [    0.009578]  [<ffffffff811bcbd9>] ? acpi_ns_load_table+0x3d/0x7c
Jun 14 19:52:00 pc-francois kernel: [    0.010008]  [<ffffffff811c3959>] ? acpi_load_tables+0x9b/0x156
Jun 14 19:52:00 pc-francois kernel: [    0.010106]  [<ffffffff8141544e>] ? acpi_early_init+0x6c/0xf7
Jun 14 19:52:00 pc-francois kernel: [    0.010198]  [<ffffffff813f8cac>] ? start_kernel+0x347/0x357
Jun 14 19:52:00 pc-francois kernel: [    0.010291]  [<ffffffff813f83fa>] ? x86_64_start_kernel+0xe5/0xe9
Jun 14 19:52:00 pc-francois kernel: [    0.020094] Setting APIC routing to flat
Jun 14 19:52:00 pc-francois kernel: [    0.020607] ..TIMER: vector=0x30 apic1=0 pin1=2 apic2=-1 pin2=-1
Jun 14 19:52:00 pc-francois kernel: [    0.030718] CPU0: Intel(R) Core(TM)2 Duo CPU     T7500  @ 2.20GHz stepping 0a

Does anybody knows what is happening ? I am not sure which component of ACPI this is related to, so please put this bug in the correct category if needed.
Comment 1 François Valenduc 2010-06-14 18:46:49 UTC
Created attachment 26769 [details]
Output of acpidump

Maybe you will find the output of acpidump useful.
Comment 2 Zhang Rui 2010-06-29 07:47:11 UTC
Ming, any update on this?
Comment 3 ykzhao 2010-07-02 03:20:41 UTC
Hi, Valenduc
    Will you please use the git-bisect to find the commit which causes the regression?

thanks.
   yakui
Comment 4 Lin Ming 2010-07-03 00:57:45 UTC
Francois confirmed that this bug is fixed by below patches in Andrew's -mmotm
tree.

http://userweb.kernel.org/~akpm/mmotm/broken-out/acpi-fix-bogus-preemption-logic.patch
http://userweb.kernel.org/~akpm/mmotm/broken-out/acpi-fix-bogus-preemption-logic-fix.patch

Mark it RESOLVED.
Comment 5 François Valenduc 2010-08-08 19:03:01 UTC
Will this patch ever reaches upstream ? I have indicated more than one month ago that it solves my problem and Andrew Morton as asked it again on the ACPI mailing list around 1 week ago. But, it seems to have fallen in a black hole...
Comment 6 Andrew Morton 2010-08-11 18:13:18 UTC
*** Bug 16564 has been marked as a duplicate of this bug. ***
Comment 7 Len Brown 2010-08-15 03:07:36 UTC
upstream in 2.6.36-rc1
closed.

commit 0a7992c90828a65281c3c9cf180be3b432d277b2
Author: Thomas Gleixner <tglx@linutronix.de>
Date:   Wed Aug 11 14:17:29 2010 -0700

    acpi: fix bogus preemption logic
Comment 8 Bart Van Assche 2011-08-27 14:50:11 UTC
Please reopen - exactly the same call stack is triggered again when booting 3.1-rc3. See e.g. http://lkml.org/lkml/2011/6/8/452 for another report of this issue.

Note You need to log in before you can comment on or make changes to this bug.