Divergence: Backport linux version of aclinux.h to ACPICA.

Backport changes made in Linux aclinux.h back to ACPICA to reduce divergence
of the ACPICA base code from Linux.

Following commits are involved:
1. Lin Ming <ming.m.lin@intel.com>
   ACPICA: Make acpi_thread_id no longer configurable, always u64
2. Thomas Gleixner <tglx@linutronix.de>
   acpi: fix bogus preemption logic
   https://bugzilla.kernel.org/show_bug.cgi?id=16210
3. Arun Sharma <asharma@fb.com>
   atomic: use <linux/atomic.h>

This will decrease 71 lines of 20120913 divergence.diff.

Signed-off-by: Lv Zheng <lv.zheng@intel.com>
Cc: Lin Ming <ming.m.lin@intel.com>
Cc: Thomas Gleixner <tglx@linutronix.de>
Cc: Arun Sharma <asharma@fb.com>